fix: spacing

--- a/src/app/components/BestWeOffer/BestWeOffer.module.css
+++ b/src/app/components/BestWeOffer/BestWeOffer.module.css
@@ -4,7 +4,6 @@
 	align-items: center;
 	position: relative;
 	width: 90%;
-	padding-top: 120px;
 	margin: 0 auto;
 }
 
