--- a/src/app/components/Blogs/Blogs.module.css
+++ b/src/app/components/Blogs/Blogs.module.css
@@ -7,7 +7,6 @@
 	position: relative;
 	width: 90%;
 	margin: 0 auto;
-	padding: 120px 0;
 }
 
 /* Header container with title and button */
