--- a/src/app/components/FAQ/FAQ.module.css
+++ b/src/app/components/FAQ/FAQ.module.css
@@ -1,7 +1,6 @@
 /* FAQ Section */
 .faqSection {
 	width: 100%;
-	padding-top: 120px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
