--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
 	gap: 36px;
 	align-items: center;
 	width: 90%;
-	margin: 200px auto 100px;
+	margin: 0 auto;
 	background-color: var(--white);
 }
 
