--- a/src/app/components/PestControlServices/PestControlServices.module.css
+++ b/src/app/components/PestControlServices/PestControlServices.module.css
@@ -1,7 +1,6 @@
 /* Main Section */
 .section {
 	width: 100%;
-	margin: 120px 0;
 	background-color: var(--white);
 }
 
