--- a/src/app/components/UserReviews/UserReviews.module.css
+++ b/src/app/components/UserReviews/UserReviews.module.css
@@ -3,7 +3,6 @@
 	background-color: var(--color-white);
 	position: relative;
 	overflow: hidden;
-	margin-top: 200px;
 }
 
 .container {
